# ManishGPT

./: .gitignore  README.md  docker-compose.yml  main.py
admin-ui/: README.md  nginx.conf  package-lock.json  package.json
admin-ui/public/: index.html
admin-ui/src/: App.js  index.css
admin-ui/src/components/: AgentAttachment.js  AgentEditModal.js  AgentManagement.js  AgentsManagement.js  AssignmentManagement.js  Dashboard.js  LLMPricing.js  Login.js  LogsViewer.css  LogsViewer.js  ModelSelector.js  PersonaCard.js  PersonaDetail.js  PersonaForm.js  PersonaManagement.js  ProtectedRoute.js  ToolsManagement.js  UserAssignment.js  UserForm.js  UserManagement.js
admin-ui/src/contexts/: AuthContext.js
admin-ui/src/services/: api.js
backend/: ADMIN_SETUP.md  ADMIN_UI_README.md  Dockerfile  add_agents_to_personas.py  admin_ui.html  alembic.ini  chat.db  create_admin.py  database.py  main.py  models.py  pyproject.toml  serve_admin_ui.py  setup_user_roles.py  start.sh
backend/agents/: __init__.py  factory.py  temp.py  yt_agent.py
backend/alembic/: env.py
backend/alembic/versions/: 1fb4e7ba3426_add_persona_platform_models.py  5deb3269fd2f_add_userroles_table.py  638c090131da_removing_uncecessary_tables.py  63908ea7541b_add_file_models.py  6c0e9da29b1e_remove_persona_id_add_persona_agent_.py  99fef0c70fa3_initial_migration.py  a05b5fee1239_add_agent_models.py  add_oauth_fields_to_users.py  b940a812f440_made_multiple_db_changes.py  c505402f5cbd_added_ouath_columns_to_user_table.py  c5cf80535b92_added_logs_tables.py  f29e385c7802_renaming_logs_table.py
backend/services/: agno_team_service.py  file_service.py  model_service.py
backend/tools/: __init__.py  file_processing_tool.py  gmail_tool.py  registry.py  web_search_tool.py  yt_tool.py
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.js  index.css
frontend/src/components/: Chat.js  ChatPage.js  ChatbotWidget.js  Login.js  OAuthCallback.js  Sidebar.js  YouTubeAgent.css  YouTubeAgent.js
frontend/src/contexts/: AuthContext.js
frontend/src/services/: api.js
user-ui/: nginx.conf  package-lock.json  package.json
user-ui/public/: index.html
user-ui/src/: App.css  index.css
user-ui/src/components/: ProtectedRoute.js  Sidebar.js
user-ui/src/services/: api.js
