[project]
name = "manishgpt-backend"
version = "0.1.0"
description = "Backend for ManishGPT chat application"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "sqlalchemy",
    "pydantic",
    "python-dotenv",
    "psycopg2-binary",
    "alembic",
    "agno",
    "openai",
    "litellm",
    "youtube-transcript-api",
    "yt-dlp",
    "numpy",
    "pillow",
    "groq"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
